[gd_scene load_steps=4 format=3 uid="uid://c28egmqahn8xt"]

[ext_resource type="Script" path="res://Scripts/inventory_ui.gd" id="1_any4n"]
[ext_resource type="FontFile" uid="uid://fuu286rsfkbf" path="res://Fonts/smallest_pixel-7.ttf" id="3_n10xw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wa3u7"]
bg_color = Color(0, 0, 0, 0.32549)

[node name="PlayerInventoryUI" type="CanvasLayer"]
script = ExtResource("1_any4n")

[node name="Panel" type="Panel" parent="."]
offset_right = 214.0
offset_bottom = 306.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_wa3u7")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 28.0
offset_right = 212.0
offset_bottom = 333.0
theme_override_constants/separation = 5

[node name="WeightLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 2.0
offset_right = 210.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("3_n10xw")
theme_override_font_sizes/font_size = 25
text = "WEIGHT: 0/30KG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LastClickTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="gui_input" from="Panel/VBoxContainer" to="." method="_on_v_box_container_gui_input"]
